[package]
name = "umbrella"
version = "0.1.0"
authors = ["garebare <garedaiki@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lelex = { git = "https://github.com/garebareDA/lelex" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }